Fixed integration icon alignment

--- a/packages/website/src/components/sections/Integrations.css
+++ b/packages/website/src/components/sections/Integrations.css
@@ -14,6 +14,7 @@
   flex-wrap:wrap;
   gap: 1.5em;
   align-items:center;
+  justify-content:center;
   margin:4em;
 }
 
